Добавлен тест для получения информации о группах с БД
Также теперь корректно работает логгирование с параметрами. Файл с
логами создается

--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -12,6 +12,10 @@ dependencies {
     compile 'de.weltraumschaf.commons:jcommander:2.2.0'
     compile 'com.thoughtworks.xstream:xstream:1.4.9'
     compile 'com.google.code.gson:gson:2.8.0'
+    compile 'ch.qos.logback:logback-classic:1.2.1'
+    compile 'mysql:mysql-connector-java:6.0.5'
+
+
 
 }
 
