--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'ch.qos.logback:logback-classic:1.2.1'
     compile 'mysql:mysql-connector-java:6.0.5'
+    compile 'org.hibernate:hibernate-core:5.2.8.Final'
 
 
 
