Добавлены отключаемые проверки UI для групп и контактов

--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -31,6 +31,9 @@ task testGroups(type: Test) {
     if (project.hasProperty('target')) {
         systemProperty 'target', "${target}"
     }
+    if (project.hasProperty('verifyUI')) {
+        systemProperty 'verifyUI', "${verifyUI}"
+    }
 }
 
     task testContacts(type: Test) {
@@ -42,6 +45,10 @@ task testGroups(type: Test) {
         }
         if (project.hasProperty('target')) {
             systemProperty 'target', "${target}"
+        }
+
+        if (project.hasProperty('verifyUI')) {
+            systemProperty 'verifyUI', "${verifyUI}"
         }
 
     }
