В тест RegistrationTests  добавлено отключение капчи

--- a/mantis-tests/src/test/resources/local.properties
+++ b/mantis-tests/src/test/resources/local.properties
@@ -1,3 +1,7 @@
 web.baseUrl = http://localhost/mantisbt-2.2.0/
 web.AdminLogin = administrator
 web.AdminPassword = root
+
+ftp.host = localhost
+ftp.login = mantis
+ftp.password = mantis
