--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -9,9 +9,7 @@ dependencies {
     compile 'org.testng:testng:6.10'
     compile 'org.seleniumhq.selenium:selenium-java:2.53.1'
     compile 'org.hamcrest:java-hamcrest:2.0.0.0'
-
-
-
+    compile 'commons-net:commons-net:3.6'
 
 }
 
