--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -13,6 +13,10 @@ dependencies {
     compile 'org.subethamail:subethasmtp:3.1.7'
     compile 'ru.lanwen.verbalregex:java-verbal-expressions:1.4'
     compile 'ch.qos.logback:logback-classic:1.2.1'
+    compile 'mysql:mysql-connector-java:6.0.5'
+    compile 'org.hibernate:hibernate-core:5.2.8.Final'
+    compile 'com.thoughtworks.xstream:xstream:1.4.9'
+    compile 'com.google.code.gson:gson:2.8.0'
 
 
 }
