--- a/mantis-tests/src/test/resources/local.properties
+++ b/mantis-tests/src/test/resources/local.properties
@@ -5,3 +5,8 @@ web.AdminPassword = root
 ftp.host = localhost
 ftp.login = mantis
 ftp.password = mantis
+
+mailserver.host = localhost
+mailserver.port = 4555
+mailserver.adminLogin = root
+mailserver.adminPassword = root
