--- a/mail-tests/src/test/resources/local.properties.properties
+++ b/mail-tests/src/test/resources/local.properties.properties
@@ -1,3 +1,3 @@
-web.baseUrl = http://localhost/addressbook/
-web.AdminLogin = admin
-web.AdminPassword = secret
+web.baseUrl = http://mail.i.ua/
+web.AdminLogin = for-tests@i.ua
+web.AdminPassword = 21107abc
